--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,8 @@
   --purple: #af52de;
   --pink: #ff2d55;
   --brown: #a2845e;
+  --black: #121212;
+  --white: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -41,11 +43,15 @@
     --purple: #bf5af2;
     --pink: #ff375f;
     --brown: #ac8e68;
+    --white: #121212;
+    --black: #ffffff;
   }
 }
 
 @theme inline {
   --color-primary: var(--indigo);
+  --color-black: var(--black);
+  --color-white: var(--white);
   --background: var(--gray-60);
 
   --color-gray-10: var(--gray-10);
@@ -74,6 +80,6 @@
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: var(--black);
   font-family: Arial, Helvetica, sans-serif;
 }
