--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,7 +79,13 @@
 }
 
 body {
+  height: 100vh;
   background: var(--background);
   color: var(--black);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+#__next {
+  overflow: hidden;
+  height: 100%;
 }
