[Modify] 다크모드 스타일 관련 수정
- 글로벌 css 파일 수정 (class로 제어)
- tailwind config 파일 수정 (class로 제어)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,29 +23,27 @@
   --white: #ffffff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --gray-10: #8e8e93;
-    --gray-20: #636366;
-    --gray-30: #48484a;
-    --gray-40: #3a3a3c;
-    --gray-50: #2c2c2e;
-    --gray-60: #1c1c1e;
-    --red: #ff453a;
-    --orange: #ff9f0a;
-    --yellow: #ffd60a;
-    --green: #30d158;
-    --mint: #63e6e2;
-    --teal: #40c8e0;
-    --cyan: #64d2ff;
-    --blue: #0a84ff;
-    --indigo: #5e5ce6;
-    --purple: #bf5af2;
-    --pink: #ff375f;
-    --brown: #ac8e68;
-    --white: #121212;
-    --black: #ffffff;
-  }
+.dark:root {
+  --gray-10: #8e8e93;
+  --gray-20: #636366;
+  --gray-30: #48484a;
+  --gray-40: #3a3a3c;
+  --gray-50: #2c2c2e;
+  --gray-60: #1c1c1e;
+  --red: #ff453a;
+  --orange: #ff9f0a;
+  --yellow: #ffd60a;
+  --green: #30d158;
+  --mint: #63e6e2;
+  --teal: #40c8e0;
+  --cyan: #64d2ff;
+  --blue: #0a84ff;
+  --indigo: #5e5ce6;
+  --purple: #bf5af2;
+  --pink: #ff375f;
+  --brown: #ac8e68;
+  --white: #121212;
+  --black: #ffffff;
 }
 
 @theme inline {
@@ -79,10 +77,16 @@
 }
 
 body {
-  height: 100vh;
+  /* overflow: hidden; */
+  /* height: 100vh; */
   background: var(--background);
   color: var(--black);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+::selection {
+  background: rgba(88, 86, 214, 0.8);
+  color: var(--color-white);
 }
 
 #__next {
