--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,11 +77,13 @@
 }
 
 body {
-  /* overflow: hidden; */
-  /* height: 100vh; */
   background: var(--background);
   color: var(--black);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 ::selection {
