--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,10 +78,14 @@
   --font-mono: var(--font-geist-mono);
 }
 
+html {
+  scroll-behavior: smooth;
+  @apply antialiased;
+}
+
 body {
-  background: var(--background);
   color: var(--black);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--background);
 }
 
 ::-webkit-scrollbar {
