[Modify] projects 페이지 수정
- projects 페이지
  - main, side 정렬 추가
  - 애니메이션 추가
  - 데이터 패칭, 마크업 구조 및 스타일 수정
  - ProjectsDataType 타입 정의 파일 추가
- projects, experience 공통
  - TabSelector 컴포넌트 분리
  - 스타일 수정
- Chip 컴포넌트 분리
- globals.css 수정
  - breakpoints 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,3 +126,13 @@ body {
 .hover-underline-animation.active::before {
   width: 100%;
 }
+
+/* breakpoint customizing */
+@theme {
+  --breakpoint-xs: 30rem; /* 480px */
+  /* sm : 640px */
+  /* md : 768px */
+  /* lg : 1024px */
+  /* xl : 1280px */
+  /* 2xl : 1536px */
+}
