[Refactor] index/hero 섹션 및 접근성 개선
- hero 섹션 애니메이션 및 태그, 색상 접근성 개선
- about/resume, tech-stack : 색상 접근성 개선
- header : Link 태그 passHref 속성 추가
- dark 모드 primary 컬러 수정
- section-layout : id props 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,9 +42,9 @@
 
 .dark:root {
   /* Primary */
-  --primary: #1e63e9;
-  --primary-light: #4c84f4;
-  --primary-dark: #1346a3;
+  --primary: #4181ff;
+  --primary-light: #70a0ff;
+  --primary-dark: #1969ff;
 
   /* Background */
   --bg-primary: #212427;
